--- a/examples/swapi-ssr/public/index.html
+++ b/examples/swapi-ssr/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' https://swapi.dev; style-src 'self' 'unsafe-inline' https://use.fontawesome.com/; font-src https://use.fontawesome.com/"/>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline' https://use.fontawesome.com/; font-src https://use.fontawesome.com/"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
